--- a/Math447_html_files/project0.html
+++ b/Math447_html_files/project0.html
@@ -10,8 +10,32 @@
 <li><a href="http://mason.gmu.edu/~wlee10">Home</a></li>
 </ul>
 
-<h3>Project 0</h3>
-<p>Sine Graph</p>
+<div class="row">
+	<div class="col-xs-12">
+		<h3>Project 0</h3>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-xs-2">
+	</div>
+	<div class="col-xs-8">
+		Project 0 is for practicing using ssh and HTML.
+	</div>
+	<div class="col-xs-2">
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-xs-2">
+	</div>
+	<div class="col-xs-8">
+		<p>Sine Graph</p>
+		<img src="/project0/sinegraph.png" alt="sinegraph">
+	</div>
+	<div class="col-xs-2">
+	</div>
+</div>
 
 </body>
 </html>
