completed. there is still some problems with text decoration but I think it it ok

--- a/Math447_html_files/project5.html
+++ b/Math447_html_files/project5.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<!-- saved from url=(0070)file:///C:/Users/Wonjun/Documents/Math%20447/project%203/project3.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></head><body>
+{% extends "base.html" %}
 
-<h1>MATH 447: Numerical Analysis</h1>
+{% block content %}
 
-<h2 align="center">Project 5: A Simple Audio Codec</h2>
+<br>
+
+<div class="row">
+  <div class="col-xs-12 text-center">
+    <h1>MATH 447: Numerical Analysis</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 text-center">
+    <h2 align="center">Project 5: A Simple Audio Codec</h2>
+  </div>
+</div>
 
 <br>
 
@@ -183,7 +193,12 @@
 
 <li><a href="http://mason.gmu.edu/~wlee10/project5problem111111111.html">Code</a></li>
 
-<h3>Reference</h3>
-<p>Sauer, T. Numerical Analysis 2nd ed. Pearson</p>
+<div class="row">
+   <div class="col-xs-12">
+    <h3>Reference</h3>
+    <hr>
+    <p>Sauer, T. Numerical Analysis 2nd ed. Pearson</p>
+  </div>
+</div>
 
-</body></html>
+{% endblock %}
